Update Icon and manager sidebar

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		
 		<!-- <link rel="manifest" href="/manifest.json" /> -->
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="/IconX.png" />
 		<meta name="msapplication-TileColor" content="#ffffff" />
 		<!-- <meta name="msapplication-TileImage" content="/s-icon-144x144.png" /> -->
 		<meta name="theme-color" content="#ffffff" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Template</title>
+		<title>ContributeX</title>
 	</head>
 	<body>
 		<div id="root"></div>
